fix(dashboard): adjust renderer margin to prevent scrollbar
related to OPT-7060

--- a/client/src/modules/components/DashboardRenderer/DashboardRenderer.scss
+++ b/client/src/modules/components/DashboardRenderer/DashboardRenderer.scss
@@ -1,7 +1,7 @@
 .DashboardRenderer {
   background-position: 6px 6px;
   background-size: calc(100% / 18 - 0.5px) 104px;
-  margin-left: -10px;
+  margin-inline: -10px;
   width: calc(100% + 20px);
 
   .grid-entry {
